JavaScript Programs Completed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Choose one</title>
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <a href="Problem1/fact.html">Problem1</a><br/>
